@@ -1,6 +1,9 @@
 			   XPCE ChangeLog
 			   ==============
 
+* ADDED: implements/3 from library(pce_meta): allow for variable method
+  name.
+
 * ADDED: `editor->auto_fill', doing the fill-part of ->insert_self_fill,
   so filling can easily be specialised in subclasses.
 
